<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_back"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
          />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="10dp"
        android:background="@android:color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text = "@string/welcome"
                android:textColor="#363A43"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text = "@string/enter_your_name"
            android:textColor="#7A8089"
            android:textSize="15sp"
            android:layout_marginTop="2dp"
             />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:textColor="#363A43"
                    android:textColorHint="#7A8089"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/teal_200"
                android:text="@string/submit"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

